objects/Site_Links__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Direct Links to internal/external web sites.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Only show the if active.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Namespace__c</fullName>
        <description>It is used to retrieve only the links related to this name space.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Namespace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Name__c</fullName>
        <description>Name of the Website that will be visible as a link.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Site Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_URL__c</fullName>
        <description>Website URL</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Site URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Site Links</label>
</CustomObject>